{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 123,
  "lineage": "32492aed-f9ae-54c8-74df-6b2734eace00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:958661899676:instance/i-08835960230a8b906",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08835960230a8b906",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c26829b9a355088f",
            "private_dns": "ip-172-16-1-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.36",
            "public_ip": "34.207.154.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072dc36bf36028597",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-028cffcdf5b0c2b27"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bee3f4346ee69ff",
            "tags": {
              "Name": "EC2Public"
            },
            "tags_all": {
              "Name": "EC2Public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028cffcdf5b0c2b27"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:internet-gateway/igw-022b8876e573b5c3d",
            "id": "igw-022b8876e573b5c3d",
            "owner_id": "958661899676",
            "tags": {
              "Name": "gw1"
            },
            "tags_all": {
              "Name": "gw1"
            },
            "vpc_id": "vpc-07f2e3463d6b5ae9f"
          },
          "dependencies": [
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-0f441096ee819e415",
            "id": "rtb-0f441096ee819e415",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022b8876e573b5c3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f2e3463d6b5ae9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0d88f0170f74e2",
            "route_table_id": "rtb-0f441096ee819e415",
            "subnet_id": "subnet-05bee3f4346ee69ff"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_route_table.vpc1_route_table",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:security-group/sg-028cffcdf5b0c2b27",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028cffcdf5b0c2b27",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.107.114.211/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "958661899676",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f2e3463d6b5ae9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-05bee3f4346ee69ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bee3f4346ee69ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-07f2e3463d6b5ae9f"
          },
          "dependencies": [
            "aws_vpc.vpc1-us-east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958661899676:subnet/subnet-09a45709f0fbc1fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a45709f0fbc1fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-0f3b4f893c85fbf47"
          },
          "dependencies": [
            "aws_vpc.vpc2-us-east2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1-us-east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-07f2e3463d6b5ae9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-01310f36ff640d961",
            "default_route_table_id": "rtb-037880c481ac883ca",
            "default_security_group_id": "sg-053f0066b22d892d9",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f2e3463d6b5ae9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037880c481ac883ca",
            "owner_id": "958661899676",
            "tags": {
              "Name": "vpc1-us-east1"
            },
            "tags_all": {
              "Name": "vpc1-us-east1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2-us-east2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:958661899676:vpc/vpc-0f3b4f893c85fbf47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b0e681c5a5be58d1",
            "default_route_table_id": "rtb-04b3a45da1bf733af",
            "default_security_group_id": "sg-0a763392f20614cd9",
            "dhcp_options_id": "dopt-05438e60b8cf0ff62",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3b4f893c85fbf47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b3a45da1bf733af",
            "owner_id": "958661899676",
            "tags": {
              "Name": "vpc2-us-east2"
            },
            "tags_all": {
              "Name": "vpc2-us-east2"
            }
          }
        }
      ]
    }
  ]
}